--- a/css/main.css
+++ b/css/main.css
@@ -5,24 +5,84 @@
     --header-text-color: rgb(255, 255, 255);
     --special-text-color: rgb(199, 161, 122);
     --main-text-color: rgb(172, 172, 172);
-  }
-
+}
 *{
+    margin: 0;
     box-sizing: border-box;
 }  
-
 body{
     background-color: var(--main-bg-color);
-    margin: 0;
+    width: 100%;
+    font-family: 'Montserrat', sans-serif;
 }
 h1{
     color: var(--header-text-color);
-    font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     text-transform: uppercase;
     text-align: center; 
 }
 
+/* HEADER */
+header{
+    height: 70vh;
+    background: url(/img/hero-bg.jpg) no-repeat  center;
+    background-size: cover;
+    position: relative;
+    
+}
+header h1{
+    color: var(--header-text-color);
+    font-weight: bold;
+    font-size: 3em;
+    text-transform: uppercase;
+    text-shadow: 4px 0 black;
+
+    margin-bottom: 2rem;
+}
+header h2{
+    color: var(--header-text-color);
+    
+    font-style: italic;
+    font-size: 2em;
+    font-weight: 300; 
+    text-transform: uppercase;
+    text-shadow: 4px 0 black;
+    margin-bottom: 2rem;
+}
+header .inner-container{
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: auto;
+    margin-top: 17rem;
+
+}
+.header-btn{
+    display: inline-block;
+    width: 200px;
+    font-weight: 400;
+    padding: 10px;
+    color: var(--header-text-color);
+    border: 4px solid var(--header-text-color);
+    text-align: center;
+    outline: none;
+    text-decoration: none;
+    margin: 15px;
+    transition: background-color .2s ease-out, color .2s ease-out;
+}
+.header-btn:hover, .header-btn:active{
+    background-color: var(--header-text-color);
+    color: #000;
+    transition: background-color .3s ease-in, color .3 ease-in;
+}
+/* CONTENT */
+.content{
+    padding: 0 5rem;
+    color: var(--main-text-color);
+    font-size: 18px;
+}
+
+/* FOOTER */
 footer{
     position: fixed;
     padding: 1rem;
@@ -31,10 +91,16 @@ footer{
     min-height: 5rem;
     background-color: var(--main-bg-color);
 }
-
 footer h5{
     color: var(--special-text-color);
-    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     text-transform: uppercase;
+}
+
+/* PHONES */
+@media only screen and (max-width: 920) {
+    .inner-container{
+        margin-top: 100px;
+    }
+    
 }
