--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,6 @@ header h1{
     font-size: 3em;
     text-transform: uppercase;
     text-shadow: 4px 0 black;
-
     margin-bottom: 2rem;
 }
 header h2{
@@ -77,6 +76,7 @@ header .inner-container{
 }
 /* CONTENT */
 .content{
+    background: url(/img/hero-bg.jpg) no-repeat  center;
     padding: 0 5rem;
     color: var(--main-text-color);
     font-size: 18px;
