--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,9 @@ h1{
 /* HEADER */
 header{
     height: 70vh;
-    background: url(img/hero-bg.jpg) no-repeat  center;
+    background: url(img/hero-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     position: relative;
     
