--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 }
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }  
 body{
@@ -69,23 +70,71 @@ header .inner-container{
     outline: none;
     text-decoration: none;
     margin: 15px;
-    transition: background-color .2s ease-out, color .2s ease-out;
+    transition: background-color .2s ease-out, color .2s ease-out, border .2s;
 }
 .header-btn:hover, .header-btn:active{
-    background-color: var(--header-text-color);
+    background-color: var(--special-text-color);
     color: #000;
-    transition: background-color .3s ease-in, color .3 ease-in;
+    border: 4px solid var(--special-text-color);
+    transition: background-color .3s ease-in, color .3 ease-in, border .3s;
 }
 /* CONTENT */
 .content{
-    padding: 3rem 5rem;
+    padding: 3rem 10rem;
     color: var(--main-text-color);
     font-size: 18px;
+    min-height: 500px;
 }
-
+.content-header{
+    text-align: center;
+    text-transform: uppercase;
+}
+.content-header h2{
+    color: var(--header-text-color);
+    font-size: 28px;
+    font-weight: 600;
+    margin: 1rem 0;
+}
+.content-header h3{
+    color: var(--special-text-color);
+    font-size: 18px;
+    font-weight: 300;
+    font-style: italic;
+    margin: 1rem 0 2rem;
+}
+.content-header:after{
+    display: inline-block;
+    content: "";
+    border-top: .15rem solid var(--special-text-color);
+    width: 8rem;
+    margin: 0 1rem;
+    transform: translateY(-1rem);
+}
+.content-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.list-element{
+    border: 4px solid var(--header-text-color);
+    margin: 2rem;
+    text-align: center;
+    transition: border .2s;
+}
+.list-element:hover{
+    border: 4px solid var(--special-text-color);
+    transition: border .3s;
+}
+.list-element img{
+    height: 300px;
+}
+.list-element h3{
+    color: var(--header-text-color);
+    text-transform: uppercase;
+    margin: 1rem;
+}
 /* FOOTER */
 footer{
-    position: fixed;
     padding: 2rem;
     bottom: 0;
     width: 100%;
