--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,6 @@ header .inner-container{
     width: 100%;
     height: auto;
     margin-top: 17rem;
-
 }
 .header-btn{
     display: inline-block;
@@ -138,9 +137,59 @@ header .inner-container{
     height: 300px;
 }
 
-/* COFFEE CONTENT PAGE*/
-.coffee-header{
-    
+/* COFFEE MODAL PAGE*/
+.modal-container{
+    color: var(--special-text-color);
+    background-color: rgba(0,0,0,0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0;
+    pointer-events: none;
+}
+.modal-container.show{
+    pointer-events: auto;
+    opacity: 1;
+}
+
+.modal{
+    width: 60%;
+    height: 90%;
+    padding: 1rem;
+    border-radius: 5px;
+    background-color: rgb(44, 27, 5);
+}
+.modal-header{
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 1rem;
+    text-transform: uppercase;
+}
+.modal-img img{
+    margin: 1rem 2rem;
+    max-width: 50%;
+    float: left;
+    border: 2px solid var(--special-text-color);
+}
+.modal-body{
+    font-size: 1.2rem;
+    line-height: 2rem;
+    font-style: italic;
+    padding-bottom: 1rem;
+}
+.modal-footer{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.5rem;
+    cursor: pointer;r
 }
 
 /* FOOTER */
