--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ header .inner-container{
 .list-element:hover{
     border: 4px solid var(--special-text-color);
     transition: border .3s;
+    cursor: pointer;
 }
 .list-element h3{
     color: var(--header-text-color);
@@ -152,6 +153,7 @@ header .inner-container{
 
     opacity: 0;
     pointer-events: none;
+    transition: opacity 0.3s ease;
 }
 .modal-container.show{
     pointer-events: auto;
@@ -160,10 +162,11 @@ header .inner-container{
 
 .modal{
     width: 60%;
-    height: 90%;
+    min-height: 90%;
     padding: 1rem;
     border-radius: 5px;
     background-color: rgb(44, 27, 5);
+    box-shadow: black 0 0 5px;
 }
 .modal-header{
     text-align: center;
@@ -176,7 +179,7 @@ header .inner-container{
     margin: 1rem 2rem;
     max-width: 50%;
     float: left;
-    border: 2px solid var(--special-text-color);
+    border: 3px solid var(--special-text-color);
 }
 .modal-body{
     font-size: 1.2rem;
