--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,36 @@
     --special-text-color: rgb(199, 161, 122);
     --main-text-color: rgb(172, 172, 172);
 }
-html{
-    scroll-behavior: smooth;
-}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}  
+
+    scrollbar-width: thin; 
+    scrollbar-color: var(--special-text-color) black ;
+} 
+
+html{
+    scroll-behavior: smooth;
+
+}
+ 
+*::-webkit-scrollbar {
+   width: 0.5em;
+}
+   
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+   
+*::-webkit-scrollbar-thumb {
+  background-color: var(--special-text-color);
+}
+
 body{
     background-color: var(--main-bg-color);
     width: 100%;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;    
 }
 h1{
     color: var(--header-text-color);
@@ -29,7 +47,8 @@ h1{
 /* HEADER */
 header{
     height: 70vh;
-    background-image: url(../img/hero-bg.jpg);
+    background-image: linear-gradient(0deg, rgb(0, 0, 0), rgba(197, 69, 10, 0.199)),
+    url(../img/hero-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
